--- a/index.html
+++ b/index.html
@@ -26,22 +26,26 @@
 					<div>
 						<img class="project-icon" src="images/space.png">
 						<h2>A RESTFUL API</h2>
-						<p>I WANTED TO PRACTICE MAKING MY OWN API FROM SCRATCH. IT’S STILL A WORK IN PROGRESS THOUGH AND I THINKS THERE’S WHOLE LOT OF ROOM FOR IMPROVEMENT.</p><br/>
-						<p class="mini-footer">LIVE SITE:</p>
+						<p>
+							I WANTED TO PRACTICE MAKING MY OWN API FROM SCRATCH. IT’S STILL A WORK IN PROGRESS THOUGH AND I THINK THERE’S LOTS OF ROOM FOR IMPROVEMENT.
+							USES PHP TO FETCH AND MANIPULATE DATA.
+						</p><br/>
 						<p class="mini-footer"><a href="https://github.com/czyrustuazon/Empyrean">GITHUB REPO</a></p>
 					</div>
 					<div>
 						<img class="project-icon" src="images/feather.png">
 						<h2>PHOTO SEARCH</h2>
-						<p>THIS USES THE RESTFUL API I CREATED TO DISPLAY PICTURES TO SITE VISITORS. USERS CAN SEARCH FOR PICTURES BASED ON THEIR TAGS.</p><br/>
+						<p>
+							THIS USES THE RESTFUL API I CREATED TO DISPLAY PICTURES TO SITE VISITORS. USERS CAN SEARCH FOR PICTURES BASED ON THEIR TAGS. 
+							CREATED USING BOOTSTRAP 4, JQUERY, AND CSS.
+						</p><br/>
 						<p class="mini-footer"><a href="https://frugalgallery.ml/">LIVE SITE</a></p>
-						<p class="mini-footer">GITHUB REPO:</p>
+						<p class="mini-footer"><a href="https://github.com/czyrustuazon/exquisitis">GITHUB REPO</a></p>
 					</div>
 					<div>
 						<img class="project-icon" src="images/bottle.png">
 						<h2>A UI FOR AN API</h2>
-						<p>THIS IS USED TO CREATE UPDATE OR DELETE PICTURES STORED ON THE SERVER.</p><br/>
-						<p class="mini-footer">LIVE SITE:</p>
+						<p>THIS IS USED TO CREATE UPDATE OR DELETE PICTURES STORED ON THE SERVER. USES JAVASCRIPT TO MAKE API CALLS</p><br/>
 						<p class="mini-footer"><a href="https://github.com/czyrustuazon/Empyrean-UI">GITHUB REPO</a></p>
 					</div>
 				</article>
